# gram-old

./: AGENTS.md  TIMELINE_NOTES.md
api/: Dockerfile  cli  config.yml  proxies.txt  pyproject.toml  task  tmp1.txt
api/app/: __main__.py  app.py  config.py  dev.py
api/app/cli/: __main__.py  aimodel.py  dev.py  dialogs.py  hatchet.py  heartbeat.py  openapi.py  prompt.py  stats.py
api/app/common/models/: enums.py  orm.py
api/app/common/utils/: account.py  functions.py  generator.py  logger.py  mob_proxy_pool.py  notify.py  openrouter.py  prompt.py  proxy.py  proxy_pool.py  s3.py  (+3 more)
api/app/dto/: account.py  ai_models.py  card.py  chat.py  common.py  contact.py  dialog.py  mailing.py  mob_proxy.py  project.py  proxy.py  stats.py  user.py
api/app/hatchet/: client.py  models.py  tasks.py
api/app/prompt/: 00-first-message.txt  10-role.html  20-instruction.html  30-context.html  41-init.html  42-engage.html  43-offer.html  44-closing.html  50-transitions.html  60-rules.html  70-status.html
api/app/routers/: accounts.py  admin.py  ai_models.py  auth.py  chat.py  contacts.py  dialogs.py  form.py  mailings.py  meetings.py  mob_proxies.py  partners.py  profile.py  projects.py  proxies.py  s3.py  schedule.py  settings.py  sse.py  stats.py
api/migrations/models/: 0_20250923144451_init.py  0_20251003154314_init.py  0_20251016001104_init.py  10_20251101155631_update.py  11_20251110145358_update.py  13_20251115140757_update.py  14_20251117183811_update.py  15_20251124132905_update.py  19_20251202150225_update.py  1_20251004175702_update.py  20_20251202151009_update.py  21_20251203135200_update.py  22_20251208141907_update.py  23_20251209124742_update.py  24_20251209154139_custom.py  25_20251211160607_update.py  26_20251215135348_update.py  27_20251216162037_update.py  28_20251218124329_update.py  29_20251218145858_update.py  2_20251004180509_update.py  30_20251220115337_update.py  31_20251220134143_update.py  32_20251221184225_update.py  33_20251224140336_custom.py  34_20251224180323_update.py  36_20251230133008_update.py  38_20251230185511_update.py  39_20260112130649_update.py  3_20251007151415_update.py  40_20260116145518_update.py  41_20260116134834_pgvector.py  46_20260120174657_update.py  47_20260122164201_update.py  4_20251008165800_update.py  51_20260202170657_update.py  53_20260203121026_custom.py  54_20260203121831_custom.py  55_20260203122259_custom.py  56_20260203172322_update.py  (+8 more)
app/: AGENTS.md  config.py  config.yml  pyproject.toml
app/api/: Dockerfile  __init__.py  app.py  dev.py
app/api/dto/: account.py  ai_models.py  chat.py  contact.py  dialog.py  mailing.py  project.py  user.py
app/api/hatchet/: client.py
app/api/routers/: accounts.py  admin.py  ai_models.py  auth.py  chat.py  dialogs.py  form.py  mailings.py  meetings.py  partners.py  profile.py  projects.py  proxies.py  s3.py  schedule.py  sse.py  stats.py
app/console/: __init__.py  __main__.py  aimodel.py  dev.py  hatchet.py  heartbeat.py  neurousers.py  stats.py  sync.py
app/migrations/models/: 0_20251016001104_init.py  10_20251101155631_update.py  11_20251110145358_update.py  12_20251114160210_update.py  13_20251115140757_update.py  14_20251117183811_update.py  15_20251124132905_update.py  16_20251125153658_update.py  17_20251201145452_update.py  18_20251201153515_update.py  19_20251202150225_update.py  20_20251202151009_update.py  21_20251203135200_update.py  22_20251208141907_update.py  23_20251209124742_update.py  24_20251209154139_custom.py  25_20251211160607_update.py  26_20251215135348_update.py  27_20251216162037_update.py  28_20251218124329_update.py  29_20251218145858_update.py  30_20251220115337_update.py  31_20251220134143_update.py  32_20251221184225_update.py  33_20251224140336_custom.py  34_20251224180323_update.py  35_20251226183034_update.py  36_20251230133008_update.py  37_20251230171917_update.py  38_20251230185511_update.py  39_20260112130649_update.py  40_20260116145518_update.py  41_20260116134834_pgvector.py  42_20260117103325_update.py  43_20260118132824_update.py  44_20260118175449_update.py  45_20260118202455_update.py  46_20260120174657_update.py  47_20260122164201_update.py  48_20260125130719_update.py  (+17 more)
app/models/: __init__.py  orm.py
app/queries/: __init__.py  accounts.py
app/utils/: __init__.py  account.py  cyclopts.py  functions.py  logger.py  neurousers_api.py  notify.py  openrouter.py  prompt.py  proxy.py  proxy_pool.py  s3.py  schedule.py  usd_rate.py  vars.py
app/utils/sync/: __init__.py  config.py  models.py  stubs.py
app/workers/: __init__.py
app/workers/base/: Dockerfile  __main__.py  client.py  worker.py
app/workers/dialog/: Dockerfile  __main__.py  worker.py
workers/dialog/: Dockerfile  config.yml  pyproject.toml  sync
workers/dialog/app/: config.py  worker.py
(+394 files in other folders)
